--- a/.github/workflows/clock_out.yml
+++ b/.github/workflows/clock_out.yml
@@ -1,8 +1,7 @@
-name: EagleGod_Labor 勞動神鷹 (簽退)
+name: EagleGod Labor Clock Out
 
 on:
   schedule:
-    # 台灣時間週一至週五 18:10 (UTC 10:10)
     - cron: '10 10 * * 1-5'
   workflow_dispatch: # 允許手動觸發測試
 
