fix: correct clock-in schedule and execution script

--- a/.github/workflows/clock_in.yml
+++ b/.github/workflows/clock_in.yml
@@ -2,7 +2,7 @@ name: EagleGod Labor Clock In
 
 on:
   schedule:
-    - cron: '10 10 * * 1-5'
+    - cron: '50 0 * * 1-5'
   workflow_dispatch: # 允許手動觸發測試
 
 jobs:
@@ -31,5 +31,5 @@ jobs:
           pip install -r requirements.txt
           playwright install chromium
 
-      - name: Execution - Clock Out
-        run: python clock_out.py
+      - name: Execution - Clock In
+        run: python clock_in.py
