--- a/.github/workflows/clock_out.yml
+++ b/.github/workflows/clock_out.yml
@@ -18,10 +18,14 @@ jobs:
             account_key: "ACCOUNT_A"
             password_key: "PASSWORD_A"
             email_key: "RECEIVER_EMAIL_A"
-          - user_id: "Eka"
+          - user_id: "Winnie"
             account_key: "ACCOUNT_B"
             password_key: "PASSWORD_B"
             email_key: "RECEIVER_EMAIL_B"
+          - user_id: "RLong"
+            account_key: "ACCOUNT_C"
+            password_key: "PASSWORD_C"
+            email_key: "RECEIVER_EMAIL_C"
 
     env:
       LOGIN_URL: ${{ secrets.LOGIN_URL }}
